# rl_ai2thor

./: .gitignore  README.md  TODOs.md  pyproject.toml  readme.md  requirements.txt  setup.py  utils.py
.github/workflows/: additional_checks.yml  python-package copy.yml  python-package.yml  python-package_former copy 2.yml  python-package_former copy.yml  python-package_former.yml
config/: environment_config.yaml  general.yaml
config/environment_modes/: alfred_like.yaml  cups_like.yaml  default.yaml  full_with_hand_movement.yaml  navigation_only.yaml
dev/data/: compatible_scenes.txt  scene_objects_list.json
dev/data/objects_metadata_samples/: FloorPlan10_physics.json  FloorPlan11_physics.json  FloorPlan12_physics.json  FloorPlan13_physics.json  FloorPlan14_physics.json  FloorPlan15_physics.json  FloorPlan16_physics.json  FloorPlan17_physics.json  FloorPlan18_physics.json  FloorPlan19_physics.json  FloorPlan1_physics.json  FloorPlan201_physics.json  FloorPlan202_physics.json  FloorPlan203_physics.json  FloorPlan204_physics.json  FloorPlan205_physics.json  FloorPlan206_physics.json  FloorPlan207_physics.json  FloorPlan208_physics.json  FloorPlan209_physics.json  FloorPlan20_physics.json  FloorPlan210_physics.json  FloorPlan211_physics.json  FloorPlan212_physics.json  FloorPlan213_physics.json  FloorPlan214_physics.json  FloorPlan215_physics.json  FloorPlan216_physics.json  FloorPlan217_physics.json  FloorPlan218_physics.json  FloorPlan219_physics.json  FloorPlan21_physics.json  FloorPlan220_physics.json  FloorPlan221_physics.json  FloorPlan222_physics.json  FloorPlan223_physics.json  FloorPlan224_physics.json  FloorPlan225_physics.json  FloorPlan226_physics.json  FloorPlan227_physics.json  (+80 more)
dev/scripts/: get_compatible_sceens.ipynb  parse_object_types.py  save_scenes_object_metadata.py  write_compatible_scenes.py
docker/: Dockerfile  example_agent.py
docker/scripts/: build.sh  run.sh
examples/: run_random.py  test_env.py
examples/benchmark/: README.md  experiment_utils.py  model_info.py  tasks_info.py  train.py
examples/benchmark/config/: environment_config.yaml  experiment_config.yaml
gym_ai2thor/: __init__.py
gym_ai2thor/envs/: actions.py  ai2thor_envs.py  ai2thor_types.py  ai2thor_utils.py  tasks.py  tasks_new3.py
requirements/: base.txt  dev.txt
src/rl_ai2thor/: __init__.py
src/rl_ai2thor/agents/: agents.py  callbacks.py
src/rl_ai2thor/data/: __init__.py  object_types.json
src/rl_ai2thor/envs/: __init__.py  _config.py  actions.py  ai2thor_envs.py  config.py  reward.py  run_random.py  scenes.py  sim_objects.py  tasks.py  wrappers.py
src/rl_ai2thor/envs/tasks/: __init__.py  _item_prop_complex.py  _item_prop_fixed.py  _item_prop_variable.py  item_prop.py  item_prop_interface.py  items.py  relations.py  tasks.py  tasks_interface.py
src/rl_ai2thor/examples/: run_sb3_dqn.py  run_simple_sb3.py
src/rl_ai2thor/examples/benchmark/: bathroom.py  bedroom.py  experiment_config.yaml  experiment_utils.py  train.py  train_multi_task.py
src/rl_ai2thor/utils/: __init__.py  ai2thor_exceptions.py  ai2thor_types.py  ai2thor_utils.py  config_handling.py  global_exceptions.py
src/rl_thor/: __init__.py
src/rl_thor/agents/: agents.py  callbacks.py
src/rl_thor/data/: __init__.py  object_types_data.json
src/rl_thor/envs/: __init__.py  _config.py  actions.py  ai2thor_envs.py  reward.py  scenes.py  sim_objects.py  wrappers.py
src/rl_thor/envs/tasks/: __init__.py  _item_prop_complex.py  _item_prop_fixed.py  _item_prop_variable.py  item_prop.py  item_prop_interface.py  items.py  relations.py  tasks.py  tasks_interface.py
src/rl_thor/examples/: run_random.py  run_simple_sb3.py
src/rl_thor/examples/benchmark/: train.py
src/rl_thor/utils/: __init__.py  ai2thor_utils.py  general_utils.py  global_exceptions.py
tests/: __init__.py  integration_test.py  test_agents.py  test_ai2thor_envs.py  test_items.py  test_tasks.py  test_wrappers.py
tests/data/: reset_separate_runs_reproducibility_obs_info.pkl  test_random_agent_different_runtimes_reproducible_actions.pkl  test_reset_different_runtime_reproducible_obs_info.pkl
tests/data/test_look_in_light_book/: advancement_list.pkl  event_list.pkl  test_info.yaml
tests/data/test_open_fridge/: event_list.pkl  test_info.yaml
tests/data/test_pickup_mug/: advancement_list.pkl  event_list.pkl
tests/data/test_place_cooled_in_apple_counter_top/: advancement_list.pkl  event_list.pkl  test_info.yaml
tests/data/test_tasks/CleanToilets/: advancement_list.pkl  controller_action_list.pkl  event_list.pkl
tests/data/test_tasks/ClearDiningTable/: advancement_list.pkl  controller_action_list.pkl  terminated_list.pkl
tests/data/test_tasks/DoHomework/: advancement_list.pkl  controller_action_list.pkl  event_list.pkl
tests/data/test_tasks/WashCutleryTask/: advancement_list.pkl  controller_action_list.pkl  event_list.pkl
tests/data/test_tasks/clean_up_bathroom/: advancement_list.pkl  controller_action_list.pkl  event_list.pkl
tests/data/test_tasks/clean_up_bedroom/: advancement_list.pkl  controller_action_list.pkl  event_list.pkl
tests/data/test_tasks/clean_up_kitchen/: advancement_list.pkl  controller_action_list.pkl  event_list.pkl
tests/data/test_tasks/clean_up_living_room/: advancement_list.pkl  controller_action_list.pkl  event_list.pkl
tests/data/test_tasks/look_in_light_book/: advancement_list.pkl  controller_action_list.pkl  event_list.pkl  terminated_list.pkl
tests/data/test_tasks/open_fridge/: advancement_list.pkl  controller_action_list.pkl  event_list.pkl
tests/data/test_tasks/pickup_mug/: controller_action_list.pkl  event_list.pkl  terminated_list.pkl
tests/data/test_tasks/prepare_going_to_bed/: advancement_list.pkl  (+3 more)
tests/scripts/: generate_test_task_data.py
(+6 files in other folders)
