[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rl_ai2thor"
version = "0.1.0"
description = "RL environment for AI2-THOR"
readme = "README.md"
license = "MIT"  # TODO: Check this
requires-python = ">=3.12"
keywords = [
  "reinforcement learning",
  "ai2thor",
  "gymnasium",
]
authors = [
  { name = "Julian Paquerot", email = "julian_p@snu.ac.kr" },
]
dependencies = [
  "ai2thor>=5.0.0",
  "gymnasium",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",  # TODO: Check this
  "Natural Language :: English",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
graph = [
  "networkx",
  "matplotlib",
  # pygraphviz, # https://pygraphviz.github.io/documentation/stable/install.html
  ]

[project.urls]  # TODO: Add these
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
Issues = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/rl-ai2thor"]